deployments/20-configs/02-testapp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: telemetrygen
  labels:
    name: telemetrygen
    istio.io/dataplane-mode: ambient
